<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SearchLicensePlateFragment">


    <TextView
        android:id="@+id/text_ask_for_license_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ask_user_for_license_number" />

    <EditText
        android:id="@+id/edit_text_license_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_ask_for_license_number"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/license_helper"
        android:inputType="textCapCharacters"/>

    <TextView
        android:id="@+id/text_license_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_text_license_number"
        android:text="@string/license_hint" />

    <Button
        android:id="@+id/button_submit_license_plate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_license_hint"
        android:layout_centerHorizontal="true"
        android:text="@string/license_submit" />

</RelativeLayout>